# probe-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TESTING.md  dist-workspace.toml
.cursor/rules/auditors/: ambiguity-auditor.md  code-quality-auditor.md  test-quality-auditor.md
.github/workflows/: ci.yml  generate-atoms.yml  release.yml
docs/: PUBLIC_API_LIMITATIONS.md  SCHEMA.md  USAGE.md
examples/: rust_curve25519-dalek_4.1.3.json
kb/: index.md
kb/engineering/: architecture.md  glossary.md  index.md  properties.md
kb/reports/: ambiguity-report.md  quality-report.md  test-report.md
src/: charon_cache.rs  charon_names.rs  constants.rs  error.rs  lib.rs  main.rs  metadata.rs  path_utils.rs  public_api.rs  rust_parser.rs  scip_cache.rs  tool_manager.rs
src/commands/: callee_crates.rs  extract.rs  list_functions.rs  mod.rs  setup.rs
tests/: extract_check.rs
