[package]
name = "probe-rust"
version = "0.6.3"
edition = "2021"
description = "Generate compact function call graph data from SCIP indexes for Rust projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Beneficial-AI-Foundation/probe-rust"
keywords = ["rust", "call-graph", "code-analysis", "scip"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "probe-rust"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
serde_stacker = "0.1"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
thiserror = "1.0"
toml = "0.8"
ureq = "2.9"
flate2 = "1.0"
tar = "0.4"
dirs = "5.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
which = "8.0.2"
sha2 = "0.10.9"

[dev-dependencies]
probe-extract-check = { git = "https://github.com/Beneficial-AI-Foundation/probe" }
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dist]
inherits = "release"
